<resources>
    <string name="app_name">Tipper</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">Tipper</string>
    <string name="home_welcome_msg">
               " שלום מור,\n\n"
        "ברוכה הבאה לטיפר! \n"
בעוד כמה צעדים, תוכלי להתחיל לחסוך למטרה המשותפת״
        ״הכניסי בבקשה פרטי חשבון בנק הפועלים
    </string>
    <string name="account_balance_msg">

שלום שמחה,
מצב חשבון עדכני: 42375.11 ש״ח
חסכת 1245 ש״ח בחודשהאחרון
</string>
        <string name="account_balance_msg2">

על מנת לחסוך amount ש״ח
        </string>
        <string name="account_balance_msg3">

בtime חודשים</string>
            <string name="account_balance_msg4">

עלייך לחסוך (12457-amount/time)ש״ח נוספים בחודש.

            </string>
            <string name="account_balance_msg5">

אנחנו פה כדי לעזור לך לחסוך.

אנא לחצ/י על המשך כדי לבחור את הקטגוריות בהן את/ה מוכן/ה לחסוך
לפי רשימת סדר עדיפויות
            </string>

    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="action_settings">Settings</string>
    <string name="connection_dialog_title">ברכות</string>
    <string name="connection_dialog_msg">החשבון הבנק שלך התחבר בהצלחה</string>
    <string name="tip1_dialog_title"><b>הגיע הזמן לקנות ביגוד אונליין!</b></string>
    <string name="tip1_dialog_msg">שמחה, את רוב קצבת הביגוד החודשית שלך את מוציאה ברשת הביגוד "אמריקן איגל" בקניון איילון הקרוב למקום מגוריך. במידה ותזמיני את אותו ביגוד של רשת "אמריקן איגל" דרך אתר הבית שלהם, תוכלי לחסוך מעל 300 ש"ח לחודש שכן, את קונה בסכומים קטנים ועל כן לא תשלמי מס יבוא. לשירותך הלינק לאתר הבית של רשת הביגוד "אמריקן איגל": http://ae.com/web/international/index.jsp
אל דאגה, ישנה מדיניות החזרה במידה ולא תאהבי את הבגד או המידה לא תתאים :)

מקבלת את ההמלצה?</string>
    <string name="tip2_dialog_title"><b>הגיע הזמן להעביר את סל הקניות שלך לרשת שיווק אחרת!</b></string>
    <string name="tip2_dialog_msg">שמחה, לפני כשבוע נפתחה רשת שיווק גדולה בשם: "זול לי" ברחוב קרניצי 43 ברמת גן, כשני רחובות ממקום מגוריך. לאחר השוואת מחירים שערכתי דרך חיובי האשראי שלך, גיליתי כי תוכלי לחסוך מעל לכ- 600 ש"ח בחודש אם תעבירי את סל הקניות שלך מרשת השיווק "מגה בעיר" בה את מקפידה לקנות את רוב מוצרי המזון לביתך, לרשת "זול לי". אומנם רשת השיווק "מגה בעיר" קרובה יותר למקום מגוריך אך החיסכון במעבר לרשת השיווק "זול לי" הוא משתלם ביותר ויקדם אותך משמעותית להשגת יעדך! בנוסף, זאת הזדמנות טובה לפעילות גופנית :)

מקבלת את ההמלצה?</string>

    <string name="tip3_dialog_title"><b>בר חדש נפתח!</b></string>
    <string name="tip3_dialog_msg">שמחה, את מרבה לבלות בברים שכונתיים בגבעתיים. רציתי ליידע אותך כי נפתח בר חדש בגבעתיים בשם "פרגולה בר" ברחוב כצנלסון 52 והוא מציע מחירי השקה על האוכל והבירות. תוכלי לחסוך מעל 200 ש"ח בחודש אם תבלי בו בחודשיים הקרובים במקום בברים המתחרים בגבעתיים. בנוסף, הביקורות מהללות את הבר החדש. זאת הזדמנות נפלאה להכיר מקומות חדשים ואנשים חדשים :)

מקבלת את ההמלצה?</string>

    <string name="tip4_dialog_title"><b>הצגה חדשה של חנוך לוין בתאטרון בית ליסין!</b></string>
    <string name="tip4_dialog_msg">שמחה, מאחר ואת חובבת הצגות, רציתי להציע לך ללכת לצפות בהצגה החדשה "חפץ" מאת המחזאי חנוך לוין שעלתה לפני כשבוע בתאטרון בית ליסין בבימויו של גלעד קמחי . המבקרים שיבחו את ההצגה ומחיר הכרטיס הוא 60 ש"ח לאדם בלבד. במידה ותצפי בהצגות בתאטרון בית ליסין המוערך ופחות בתאטרון הקאמרי, תוכלי לחסוך לפחות כ100 ש"ח בחודש. זאת הזדמנות נהדרת להתרשם מתאטרון משובח במחיר הוגן :)

מקבלת את ההמלצה?</string>

    <string name="tip5_dialog_title"><b>עדכון חבילת הגלישה!</b></string>
    <string name="tip5_dialog_msg">שמחה, את משלמת כפול על חבילת הגלישה שלך, מגיע לך מחיר סטודנט מאחר ונרשמת ללימודים! צרי קשר עם ספק האינטרנט שלך- בזק בינלאומי, דרך הלינק הבא: https://www.bezeqint.net/

מקבלת את ההמלצה?</string>

    <string name="tip6_dialog_title"><b>הלוואה מיוחדת לטיול לדרום אמריקה!</b></string>
    <string name="tip6_dialog_msg">שמחה, הגדרת כי בעוד כחמישה חודשים ו- 20 יום, את מעוניינת לטוס לטיול מדהים בדרום אמריקה. לפני כשלושה ימים, השיק בנק הפועלים הלוואה מיוחדת לטיולים. תנאי ההלוואה טובים והריביות נמוכות. על פי חישוב הכנסתך החודשית וחישוב ממוצע הוצאותיך, הלוואה זו היא ברת החזר עבורך. במידה ותחליטי לקחת הלוואה זו, תוך חודשיים מרגע שבתך לארץ תוכלי להזדכות על חובותיך לבנק. בלינק הבא תמצאי מידע נוסף על ההלוואה הרלוונטית עבורך: https://www.bankhapoalim.co.il
לפעמים דחיפה קטנה קדימה משנה המון :)ֿ

מקבלת את ההמלצה?</string>

    <string name="ok">המשך</string>
    <string name="thanks">תודה</string>
    <string name="title_activity_target_config">Configuration</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_target">בחר מטרה לחסכון</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_target_conf">TargetConfActivity</string>
    <string name="title_activity_tips">TipsActivity</string>

</resources>
